--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:label="fitbit_theme"
+        android:label="Monitor"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
