--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fitbit_theme
+name: Monitor
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -36,13 +36,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  file_picker: ^6.1.1
+  file_picker: ^8.0.0+1
   path: ^1.9.0
   firebase_core: ^2.24.2
   excel: ^4.0.2
   cloud_firestore: ^4.14.0
   intl: ^0.19.0
   uuid: ^4.3.3
+  firebase_auth: ^4.16.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
