--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   uuid: ^4.3.3
   firebase_auth: ^4.16.0
   shared_preferences: ^2.2.2
+  firebase_storage: ^11.7.2
+  path_provider: ^2.1.3
+  syncfusion_flutter_xlsio: ^25.1.40
+  csv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
