--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,9 +12,10 @@ jobs:
       FIREBASE_CLI_EXPERIMENTS: webframeworks
     steps:
       - uses: actions/checkout@v4
-      - uses: flutter-actions/setup-flutter@v1
+      - uses: subosito/flutter-action@v2
         with:
-          sdk-version: '3.4.0'
+          channel: stable
+          flutter-version: 3.22.0
       - run: flutter pub get  # Get dependencies
       - run: flutter build web  # Build for web
       - uses: FirebaseExtended/action-hosting-deploy@v0
