--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,10 +12,10 @@ jobs:
       FIREBASE_CLI_EXPERIMENTS: webframeworks
     steps:
       - uses: actions/checkout@v4
-      - uses: flutter-actions/flutter-action@v2
+      - uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version: 3.22.0
+          flutter-version-file: pubspec.yaml
       - run: flutter pub get  # Get dependencies
       - run: flutter build web  # Build for web
       - uses: FirebaseExtended/action-hosting-deploy@v0
