--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version-file: pubspec.yaml
+          flutter-version: 3.22.0
       - run: flutter pub get  # Get dependencies
       - run: flutter build web  # Build for web
       - uses: FirebaseExtended/action-hosting-deploy@v0
