--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
+          channel: beta
           flutter-version: 3.22.0
       - run: flutter pub get  # Get dependencies
       - run: flutter build web  # Build for web
