--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,8 +14,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2.16.0
         with:
-          channel: beta
-          flutter-version: 3.22.0
+          channel: master
+          flutter-version: 65e6577
       - run: flutter pub get  # Get dependencies
       - run: flutter build web  # Build for web
       - uses: FirebaseExtended/action-hosting-deploy@v0
