--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,11 +11,10 @@ jobs:
     env:
       FIREBASE_CLI_EXPERIMENTS: webframeworks
     steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2.16.0
+      - uses: actions/checkout@v2
+      - uses: cjlapao/setup-flutter@v1
         with:
-          channel: master
-          flutter-version: 65e6577
+          flutter-version: '3.22.0'
       - run: flutter pub get  # Get dependencies
       - run: flutter build web  # Build for web
       - uses: FirebaseExtended/action-hosting-deploy@v0
