--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build_and_deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     env:
       FIREBASE_CLI_EXPERIMENTS: webframeworks
     steps:
@@ -15,10 +15,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: beta
-          version: 3.4.0
-      - run: |
-          sudo apt-get update -y
-          sudo apt-get install -y ninja-build libgtk-3-dev
+          flutter-version: 3.22.0
       - run: flutter pub get  # Get dependencies
       - run: flutter build web  # Build for web
       - uses: FirebaseExtended/action-hosting-deploy@v0
