--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   path_provider: ^2.1.3
   syncfusion_flutter_xlsio: ^25.1.40
   csv: ^6.0.0
+  firebase_messaging: ^14.9.2
+  flutter_local_notifications: ^17.1.2
+  http: ^1.2.1
+  file_saver: ^0.2.12
 
 dev_dependencies:
   flutter_test:
