--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,15 +11,24 @@ jobs:
     env:
       FIREBASE_CLI_EXPERIMENTS: webframeworks
     steps:
-      - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3  # Updated to the latest stable version
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: beta
-      - run: flutter pub get  # Get dependencies
-      - run: flutter build web  # Build for web
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+
+      - name: Get Flutter Dependencies
+        run: flutter pub get
+
+      - name: Build Flutter Web Application
+        run: flutter build web
+
+      - name: Deploy to Firebase Hosting
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MONITOR_BMSCE }}'
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_MONITOR_BMSCE }}
           channelId: live
           projectId: monitor-bmsce
